--- a/scss/main.scss
+++ b/scss/main.scss
@@ -151,6 +151,10 @@ hr {
     
   }
 
+  &.grid-item--single {
+    @include span(1 no-gutters);
+  }
+
 }
 
 .grid-item__content {
@@ -178,3 +182,15 @@ hr {
   } */
 }
 
+.dot {
+  width: 16px;
+  height: 16px;
+  margin: 20px auto;
+  border-radius: 50%;
+  background: white;
+
+  @include at-breakpoint($bp-large) {
+    width: 32px;
+    height: 32px;
+  }
+}
